# MatImpute

./: README.md  pyproject.toml
datasets/: BMDS_data.csv  Rajan_MXene.csv
experiment/: 3ratio-rdf-PUE.npy  3ratios-rdf-MAR.npy  3ratios-rdf-glass.npy  3types-rdf-MAR.npy  3types-rdf-PUE.npy  3types-rdf-glass.npy  DataSets.py  Et-BMDS_data_dis.csv  Et-BMDS_data_rmse.csv  Et-Bala_classification_dataset_dis.csv  Et-Bala_classification_dataset_rmse.csv  Et-Crystal_structure_dis.csv  Et-Crystal_structure_rmse.csv  Et-Rajan_MXene_data_dis.csv  Et-Rajan_MXene_data_rmse.csv  Et-adsadasdasd-Bala_regression_dataset_dis.csv  Et-adsadasdasd-Bala_regression_dataset_rmse.csv  Et-glass_dis.csv  Et-glass_rmse.csv  Et-knn-BMDS_data_dis.csv  Et-knn-BMDS_data_rmse.csv  Et-knn-Bala_classification_dataset_dis.csv  Et-knn-Bala_classification_dataset_rmse.csv  Et-knn-Bala_regression_dataset_dis.csv  Et-knn-Bala_regression_dataset_rmse.csv  Et-knn-CCPM_dis.csv  Et-knn-CCPM_dis_mean.csv  Et-knn-CCPM_rmse.csv  Et-knn-Crystal_structure_dis.csv  Et-knn-Crystal_structure_rmse.csv  Et-knn-PUE_dis.csv  Et-knn-PUE_rmse.csv  Et-knn-Rajan_MXene_data_dis.csv  Et-knn-Rajan_MXene_data_rmse.csv  Et-knn-bandgap_dis.csv  Et-knn-bandgap_rmse.csv  Et-knn-glass_dis.csv  Et-knn-glass_rmse.csv  FillResultPlot.py  Impute.py  (+48 more)
experiment/dataset/: 3D_printer.csv  BMDS_data.csv  Bala_classification_dataset.csv  Bala_regression_dataset.csv  CCPM.csv  Concrete Compressive Strength.csv  Crystal_structure.csv  PUE.csv  Rajan_MXene_data.csv  bandgap-ori.csv  bandgap.csv  glass.csv
tests/: MatImpute.py  utils.py
(+1214 files in other folders)
